--- a/box_generator/src/components/boxes.css
+++ b/box_generator/src/components/boxes.css
@@ -1,6 +1,6 @@
 .box{
-    width: 100px;
-    height: 100px;
+    /* width: 100px;
+    height: 100px; */
     margin: 10px;
     padding: 10px;
 }
@@ -9,4 +9,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
 }
